优化一些接口 修改不规范的方法名