@@ -4,6 +4,7 @@ import com.wzkris.user.domain.SysRole;
 import com.wzkris.user.domain.dto.SysRoleDTO;
 import org.springframework.lang.Nullable;
 
+import java.util.Collections;
 import java.util.List;
 
 /**
@@ -94,6 +95,6 @@ public interface SysRoleService {
      * @param roleId 待操作的角色id
      */
     default void checkDataScopes(Long roleId) {
-        this.checkDataScopes(List.of(roleId));
+        this.checkDataScopes(Collections.singletonList(roleId));
     }
 }
